# MCP-CriticAgent

./: .env.example  .env.template  .gitignore  LICENSE  README.md  debug_parsing.py  next.md  pyproject.toml  requirements.txt  vercel.json
.github/instructions/: main.instructions.md
.github/workflows/: mcp-stress-test.yml  parallel-stress-test.yml  simple-mcp-test.yml  single-mcp-test.yml
data/: mcp_cleaned.csv  mcp_compatibility_database.json  modelscope_merge.xlsx  original_data1.csv  original_data2.csv  phase1_targets.txt  simple_mcp_test.csv  simple_uv_mcp_test.csv  test.csv
data/test_results/: mcp_test_20250818_230609.html  mcp_test_20250818_230609.json  mcp_test_20250821_174305.html  mcp_test_20250821_174305.json
database/: init_complete.sql  supabase_init.sql
database/migrations/: 001_create_evaluations_table.sql  002_add_comprehensive_scoring.sql  (+4 more)
docs/: COMPREHENSIVE_SCORING_GUIDE.md  DATABASE_GUIDE.md  DEPLOYMENT.md  QUICKSTART.md  SUPABASE_API_SPEC.md  SUPABASE_CHECKLIST.md  SUPABASE_SETUP.md  full-automation-deployment-guide.md  github-actions-database-integration.md  github-actions-frontend-deployment.md  github-actions-integration.md  next.md  project.md  refactor-plan.md  workflow.md
frontend/: .vercelignore  package.json  tsconfig.tsbuildinfo  vercel.json
scripts/: generate_complete_test_data.py  generate_test_data.py  local_stress_test.py  select_simple_tools.py  simple_tool_selector.py  verify_action_runtime.py
src/: __init__.py  __main__.py  main.py
src/core/: tester.py  (+10 more)
test/: QUICKSTART.md  README.md  master_test.py  mcp_test_summary.py  mcp_tools_config.py  test_crossplatform_mcp.py  test_single_mcp_tool.py  verify_agents.py  verify_platform.py
test_data/: BINARY_FILES_GUIDE.md  README.md  application_config.xml  config.json  employee_management.xlsx  employees.csv  financial_report.xlsx  mcp_framework_presentation.pptx  mcp_test_guide.docx  mcp_tools.csv  mcp_tools.xml  products.json  sales_data.csv  simple_employees.csv  test_results.json
tools/: execute_comprehensive_scoring_migration.py  execute_lobehub_migration.py  export_comprehensive_scores.py  manual_update_comprehensive_score.py  show_comprehensive_scores.py  simple_add_fields.py  verify_database_schema.py
(+107 files in other folders)
